# matrix2

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  generate_previews.py  main.py  matrix.example.toml  matrix.py  matrix.service  matrix2.service  matrix_schema.json  pyproject.toml  rsync_exclude
.github/workflows/: ci.yml
matrix/: app.py  approaching.py  bluebikes.py  cache.py  fish.py  mbta.py  menu.py  no_connection.py  spotify.py  timed.py  transit.py  weather.py  web_ui.py
matrix/modes/: brightness.py  config.py  main.py  menu.py  mode.py  network.py  off.py  screens.py
matrix/resources/: colors.py  fonts.py
matrix/screens/: approaching.py  bluebikes.py  fish.py  forecast.py  mbta.py  octoprint.py  qrcode.py  screen.py  spotify.py  transit.py  weather.py
matrix/templates/: index.html
matrix/utils/: bun.py  config.py  hardware.py  line_wrap.py  matter.py  network.py  no_connection.py  panels.py
matter/: package-lock.json  package.json
matter/src/: index.ts
scripts/: amy_fish.js  generate_config_schema.py  setup_brew.sh  setup_datadog.py
