[project]
name = "matrix2"
authors = [{ name = "Brooke Chalmers", email = "breq@breq.dev" }]
requires-python = ">=3.11"
version = "0.1.0"
dependencies = [
    "pillow==11.1.0",
    "qrcode==8.0",
    "requests==2.32.3",
    "spotipy==2.19.0",
    "python-dotenv==1.0.1",
    "datadog==0.51.0",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["matrix"]
